# bestofrs

./: .dockerignore  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.worker  README.md  compose.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  (+2 more)
crates/infra/: Cargo.toml
crates/infra/src/: setup.rs
crates/infra/src/config/: config.rs  settings.rs
crates/infra/src/config/toml/: example.toml
crates/ui/: Cargo.toml  Dioxus.toml  tailwind.css
crates/ui/assets/: dx-components-theme.css  font.css  theme.css
crates/ui/src/: lib.rs  main.rs
crates/ui/src/IO/: admin.rs  api_error.rs  auth.rs  extractors.rs  health.rs  health_check.rs  mod.rs  projects.rs  repos.rs  search.rs  seo.rs  t.json  user.rs
crates/ui/src/components/: io_cell.rs  mod.rs
crates/ui/src/components/common/: breadcrumb.rs  lottie_web_comp.rs  mod.rs  pagination.rs  repo_manuscript_card.rs  repo_row.rs  seo.rs  typing_text.rs
crates/ui/src/components/common/markdown/: component.rs  mod.rs  rewrite.rs  style.css
crates/ui/src/components/common/tag_content/: mod.rs  skeleton.rs
crates/ui/src/components/icons/: mod.rs
crates/ui/src/components/layout/: fuzzy_search.rs  mod.rs
crates/ui/src/components/layout/root/: footer.rs  mod.rs  scroll_progress.rs  scroll_to_top.rs
crates/ui/src/components/layout/user/: color_switcher.rs  footer.rs  header_nav.rs  language_switcher.rs  mod.rs  theme_switcher.rs  user_profile.rs
crates/ui/src/components/layout/user/fuzzy_search/: mod.rs  repo_row.rs  skeleton.rs  tag_row.rs
crates/ui/src/components/layout/user/gearmap/: mod.rs
crates/ui/src/components/page_list/: component.rs  mod.rs  skeleton.rs
crates/ui/src/components/providers/: config_provider.rs  mod.rs  preference_provider.rs  user_provider.rs
crates/ui/src/components/ui/: mod.rs
crates/ui/src/components/ui/dropdown_menu/: style.css
crates/ui/src/components/ui/hover_card/: component.rs
crates/ui/src/components/ui/sheet/: component.rs
crates/ui/src/components/ui/tabs/: style.css
crates/ui/src/components/views/: mod.rs
crates/ui/src/components/views/about/: about_en-US.md  about_zh-CN.md  mod.rs  style.css
crates/ui/src/components/views/admin/: mod.rs
crates/ui/src/components/views/admin/backup/: mod.rs
crates/ui/src/components/views/admin/finder/: context.rs  mod.rs
crates/ui/src/components/views/admin/finder/finder_table/: mod.rs  skeleton.rs
crates/ui/src/components/views/admin/job/: mod.rs
crates/ui/src/components/views/admin/project_management/: mod.rs
crates/ui/src/components/views/admin/projects/: context.rs  mod.rs  search.rs
crates/ui/src/components/views/admin/tags/: mod.rs
crates/ui/src/components/views/admin/tags_management/: mod.rs
crates/ui/src/components/views/home/: action_section.rs  faq_section.rs  mod.rs  style.css
crates/ui/src/components/views/home/rank_panel/: mod.rs  rank_tab_item.rs  repo_row.rs  time_range_button.rs
crates/ui/src/components/views/not_found/: mod.rs
crates/ui/src/components/views/repo/: mod.rs
crates/ui/src/components/views/repo/detail/: chart.rs  deltas.rs  mod.rs  snapshot.rs
crates/ui/src/components/views/repo/list/: mod.rs  repo_list_content.rs  repo_list_handler.rs  repo_meta.rs
crates/ui/src/components/views/tag/: meta_handler.rs  mini_repo_card.rs  mod.rs  tab_menu.rs  tag_row.rs
crates/ui/src/components/views/tag/tag_list/: mod.rs
crates/ui/src/impls/: auth.rs  datetime.rs  error.rs  mod.rs  session.rs
crates/ui/src/impls/i18n/: mod.rs
crates/ui/src/impls/i18n/locales/: en-US.ftl  zh-CN.ftl
crates/ui/src/impls/session/: auth.rs  consts.rs  mod.rs  preference.rs  setup.rs
crates/ui/src/js/: chart_bridge.js  scroll_progress.js  scroll_to_top.js  theme_bridge.js
crates/ui/src/root/: mod.rs  routes.rs
crates/ui/src/root/layouts/: admin_layout.rs  mod.rs  root_layout.rs  user_layout.rs
crates/ui/src/root/routes/: mod.rs
crates/ui/src/root/routes/about/: mod.rs
crates/ui/src/root/routes/admin/: mod.rs
crates/ui/src/root/routes/not_found/: mod.rs
crates/ui/src/root/views/: admin.rs  home.rs  layout.rs  login.rs  mod.rs  page.rs  repo.rs  tags.rs
crates/ui/src/types/: finder.rs  mod.rs  preference.rs  projects.rs  repos.rs  search.rs  snapshot_deltas.rs  snapshots.rs  tags.rs
(+115 files in other folders)
