[package]
name = "infra"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
app = { path = "../app" }
adapters = { path = "../adapters" }

config = "0.14"
serde = { version = "1.0", features = ["derive"] }
redis = { version = "1.0", features = ["aio", "tokio-comp"] }
redis_pool = "0.10"
