[package]
name = "ui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dioxus = { version = "0.7.2", features = ["router", "fullstack"] }
axum = { version = "0.8.0", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

app = { path = "../app" }
domain = { path = "../domain" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"], optional = true }
infra = { path = "../infra", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:axum", "dep:tokio", "dep:rand", "dep:infra"]
