[package]
name = "ui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dioxus = { version = "0.7.2", features = ["router", "fullstack"] }
dioxus-charts = "0.4.0"
dioxus-use-js = "0.4.6"
dioxus-sdk-time = "0.7"
axum = { version = "0.8.0", optional = true }
axum_session = { version = "0.17", optional = true }
axum_session_auth = { version = "0.17.0", optional = true }
axum_session_redispool = { version = "0.8.0", optional = true }
redis_pool = { version = "0.10.0", optional = true }
redis = { version = "1.0", features = ["aio", "tokio-comp"], optional = true }
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
], optional = true }
async-trait = { version = "0.1", optional = true }
anyhow = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
url = "2"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
dioxus-markdown = { git = "https://github.com/rambip/rust-web-markdown", package = "dioxus-markdown" }

app = { path = "../app" }
domain = { path = "../domain" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"], optional = true }
infra = { path = "../infra", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
  "dioxus/server",
  "dep:axum",
  "dep:axum_session",
  "dep:axum_session_auth",
  "dep:axum_session_redispool",
  "dep:redis_pool",
  "dep:redis",
  "dep:chrono",
  "dep:async-trait",
  "dep:tokio",
  "dep:infra",
]
